buildscript {
	repositories{
        maven {
            url repositoryMavenCentral
        }
	}
    dependencies {
        classpath("org.springframework.boot:spring-boot-gradle-plugin:2.3.8.RELEASE")
    }
}

//plugins{
//    id 'org.jetbrains.kotlin.multiplatform' version '1.3.72'
//    id 'org.jetbrains.kotlin.plugin.serialization' version '1.3.72'
//}

subprojects{

    apply plugin: 'java'
    apply plugin: 'eclipse'
    apply plugin: 'idea'
    apply plugin: 'io.spring.dependency-management'
    apply plugin: 'maven-publish'
    apply from: '../publish.gradle'

    sourceCompatibility = 1.8
    targetCompatibility = 1.8

    tasks.withType(JavaCompile) {
//        options.compilerArgs << "-Xlint:unchecked" << "-Xlint:deprecation"
    }

    configurations {
        provided
    }

    sourceSets.main.compileClasspath += configurations.provided
    sourceSets.test.compileClasspath += configurations.provided
    sourceSets.test.runtimeClasspath += configurations.provided

    repositories {
        maven {
            url repositoryMavenCentral
        }
        maven {
            url "https://repo1.maven.org/maven2/"
        }
    }

    dependencyManagement {
        resolutionStrategy {
            cacheChangingModulesFor 0, 'seconds'
        }
        imports {
            mavenBom "io.anyway.bigbang.framework:framework-dependency-management:1.0.0-SNAPSHOT"
        }
    }

    dependencies {
        annotationProcessor("org.projectlombok:lombok")
        compileOnly("org.projectlombok:lombok")
        testAnnotationProcessor("org.projectlombok:lombok")
        testCompileOnly("org.projectlombok:lombok")

//        testCompile("org.testcontainers:testcontainers")
//        testCompile("org.awaitility:awaitility")
//        testCompile("com.github.tomakehurst:wiremock-standalone")
//        testCompile("org.apache.httpcomponents:fluent-hc")
//        testCompile("org.springframework.boot:spring-boot-starter-test")
    }

}


